Fixed welcome scrollbar

--- a/app/src/less/welcome.less
+++ b/app/src/less/welcome.less
@@ -6,17 +6,20 @@
     right:0;
     bottom:0;
     z-index:@welcome-zindex;
+    overflow:auto;
 
     .fade > .show(@chapter-starting-duration-2);
 
 
     &__bg {       
         .covering();
+        position:fixed;
         background-image:url("/img/bg/wait.jpg");   
     }
 
     &__guide {
         .covering();
+        position:fixed;
 
         &.ng-hide-remove {
             display:block!important;
@@ -32,6 +35,7 @@
         }
 
         background:black no-repeat center center;
+        background-size:auto auto;
         z-index:@welcome-zindex + 100;
 
         &--headphone {
@@ -48,7 +52,8 @@
         position:absolute;
         top:10%;
         left:50%;
-        .translate(-50%, 0);
+        padding-bottom:60px;
+        .translate(-50%, 0);        
     }
 
     &__intro,    
